# RagMind

./: .gitignore  README.md
wonders/: main.py  ocrtest.py  project_summary.md  pyproject.toml  requirements.txt
wonders/Backend/: backend.py
wonders/Frontend/: index.html
wonders/RAG/: chunking.py  ingest.py  main.py  vector_store.py
wonders/Retrieve/: llmquery.py
wonders/VLM/: imagellm.py
