[project]
name = "wonders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-unstructured[local]>=1.0.1",
    "langgraph>=1.1.2",
    "pymupdf>=1.27.2",
    "sentence-transformers>=5.3.0",
    "textloader>=0.0.9",
    "unstructured>=0.21.5",
]
